dev/tests/cases/pos/22_halt.tv
df main() -> void {
    echo!("before");
    halt("unrecoverable: stop here");
    echo!("never");
}
