dev/tests/cases/neg/08_unsafe_misuse.tv
df main() -> void {
    unsafe echo!("hi");
}
